// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render P tag with core props 1`] = `
.c0 {
  font-weight: 400;
  width: 100%;
  color: #333;
  text-align: right;
  margin: 0 0 10px;
  padding: 10px;
  font-size: 30px;
  line-height: 40px;
}

.c0 em,
.c0 i {
  font-style: italic;
}

.c0 b,
.c0 strong {
  font-weight: bold;
}

.c0 a {
  font-size: 1em;
  color: currentColor;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  font-weight: 600;
}

.c0 a:hover {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  color: #8f8f8f;
}

.c0 pre {
  font-family: "Courier 10 Pitch",Courier,monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
}

.c0 code {
  font-family: Monaco,Consolas,"Andale Mono","DejaVu Sans Mono",monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  background: #faf8f0;
}

<p
  class="c0"
  color="#333"
  data-testid="test-text"
  font-size="30px"
>
  A tasty treat
</p>
`;

exports[`Render P tag with fluid type props 1`] = `
.c0 {
  font-weight: 400;
  width: 100%;
  color: #262729;
  text-align: left;
  margin: 0 0 20px;
  padding: 0;
  font-size: 10px;
  line-height: 18px;
}

.c0 em,
.c0 i {
  font-style: italic;
}

.c0 b,
.c0 strong {
  font-weight: bold;
}

.c0 a {
  font-size: 1em;
  color: currentColor;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  font-weight: 600;
}

.c0 a:hover {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  color: #8f8f8f;
}

.c0 pre {
  font-family: "Courier 10 Pitch",Courier,monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
}

.c0 code {
  font-family: Monaco,Consolas,"Andale Mono","DejaVu Sans Mono",monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  background: #faf8f0;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: calc(10px + (18 - 10) * (100vw - 400px) / (1200 - 400));
    line-height: calc(18px + (26 - 18) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    font-size: 18px;
    line-height: 26px;
  }
}

<p
  class="c0"
  color="#262729"
  data-testid="test-text"
  font-size=""
>
  A tasty treat
</p>
`;

exports[`Render default P tag and styles 1`] = `
.c0 {
  font-weight: 400;
  width: 100%;
  color: #262729;
  text-align: left;
  margin: 0 0 20px;
  padding: 0;
  font-size: 14px;
  line-height: 17px;
}

.c0 em,
.c0 i {
  font-style: italic;
}

.c0 b,
.c0 strong {
  font-weight: bold;
}

.c0 a {
  font-size: 1em;
  color: currentColor;
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  font-weight: 600;
}

.c0 a:hover {
  -webkit-transition: color 0.3s;
  transition: color 0.3s;
  color: #8f8f8f;
}

.c0 pre {
  font-family: "Courier 10 Pitch",Courier,monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
}

.c0 code {
  font-family: Monaco,Consolas,"Andale Mono","DejaVu Sans Mono",monospace;
  font-size: 95%;
  line-height: 140%;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: -o-pre-wrap;
  white-space: pre-wrap;
  background: #faf8f0;
}

@media screen and (min-width:400px) {
  .c0 {
    font-size: calc(14px + (17 - 14) * (100vw - 400px) / (1200 - 400));
    line-height: calc(17px + (29 - 17) * (100vw - 400px) / (1200 - 400));
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    font-size: 17px;
    line-height: 29px;
  }
}

<p
  class="c0"
  color="#262729"
  data-testid="test-text"
  font-size=""
>
  A tasty treat
</p>
`;
